--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!doctype html>
 <head>
+	<style>
+ 		p {
+			font-size: 14px;
+			font-family: arial;
+		}
+		.background {
+			margin-left: 20%;
+			margin-right: 20%;
+		}
+		
+		.main {
+			margin-left: 20%;
+			margin-right: 20%;
+		}
+	</style>
 </head>
 <body>
   <strong><h1>User Experience with Administrative User Interfaces</h1></strong>
   <h3>Background</h3>
-  <p>Some terminology to help with understanding the content of this article:
-	Workflow - the steps someone takes to accomplish a task from start to finish
-	Administrative panel or admin panel - The location in an application where a designated user or users go to make modifications to the data or settings for the application
-	UI - stands for user interface, the part of an application that users interact with
-	UX - stands for user experience, a well crafted UI provides a good UX, and a good UX is the goal for any application
-	End user - the final user of an application, if you are ordering a pizza online, you are the end user of that website
-	Administrator - a general term used for people who control the content, and usually permissions, for an application. They are close to an end user, but have much more hands on work with the application than a true end user
-  </p>
+  <div class="backround">
+	  <p>Some terminology to help with understanding the content of this article:
+		Workflow - the steps someone takes to accomplish a task from start to finish
+		Administrative panel or admin panel - The location in an application where a designated user or users go to make modifications to the data or settings for the application
+		UI - stands for user interface, the part of an application that users interact with
+		UX - stands for user experience, a well crafted UI provides a good UX, and a good UX is the goal for any application
+		End user - the final user of an application, if you are ordering a pizza online, you are the end user of that website
+		Administrator - a general term used for people who control the content, and usually permissions, for an application. They are close to an end user, but have much more hands on work with the application than a true end user
+	  </p>
+  </div>
   <hr>
+  <div class="main">
   <p>Designing a good admin panel UI is an important part of creating a good website or platform that allows administrators to modify their site quickly and easily. While end users should never see the administrative panel, it is crucial that it is designed well for your administrator clients. There are also a few different factors that should be taken into account when creating an administrative panel, some follow the same goals as those for end users, or the “front end” of the application, but there are some that should be handled differently.
 
 	One factor of creating an admin panel that is quite different from the user end, is that your goal is to make the admin panel quick and easy to navigate, to reduce the time that an admin needs to spend in the admin panel. While the end user side of websites are typically created with the intention of retaining users attention and keeping them on the site as long as possible, administrative UI’s should be the opposite. The design should make admins task of going in and editing something as quick as possible, to save their time and patience when doing administrative work. Reducing the number of actions, or time, to complete a task is one of the 4 Golden Rules of UI Design by Nick Babich.
@@ -33,4 +51,5 @@ Related articles: https://uxdesign.cc/designing-an-admin-panel-3e77c19870f4
 https://www.netguru.com/blog/admin-panel-design
 https://medium.com/@erikdkennedy/7-rules-for-creating-gorgeous-ui-part-1-559d4e805cda
 </p>
+  </div>
 </body>
