--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 			margin-left: 20%;
 			margin-right: 20%;
 		}
+		.title {
+			margin-left: 20%;
+			margin-right: 20%;
+		}
 	</style>
 </head>
 <body>
-  <strong><h1>User Experience with Administrative User Interfaces</h1></strong>
+  <div class="title"><strong><h1>User Experience with Administrative User Interfaces</h1></strong></div>
   <h3>Background</h3>
-  <div class="backround">
+  <div class="background">
 	  <p>Some terminology to help with understanding the content of this article:
 		Workflow - the steps someone takes to accomplish a task from start to finish
 		Administrative panel or admin panel - The location in an application where a designated user or users go to make modifications to the data or settings for the application
@@ -47,14 +51,15 @@
 	  </p>
 
 <p>
-Mentioned articles:
-	<a href="https://xd.adobe.com/ideas/process/ui-design/4-golden-rules-ui-design/">4 Golden Rules of UI Design by Nick Babich</a>
-	<a href="https://uxplanet.org/the-dos-and-don-ts-of-ux-design-f874d7834b45">Rashi Desai’s The Do’s and Don’ts of UX Design</a>
-	<a href="https://www.nngroup.com/articles/ten-usability-heuristics/">Jakob Nielsons 10 Usability Heuristics for User Interface Design</a>
-Related articles: 
-	<a href="https://uxdesign.cc/designing-an-admin-panel-3e77c19870f4">https://uxdesign.cc/designing-an-admin-panel-3e77c19870f4</a>
-	<a href="https://www.netguru.com/blog/admin-panel-design">https://www.netguru.com/blog/admin-panel-design</a>
-	<a href="https://medium.com/@erikdkennedy/7-rules-for-creating-gorgeous-ui-part-1-559d4e805cda">https://medium.com/@erikdkennedy/7-rules-for-creating-gorgeous-ui-part-1-559d4e805cda</a>
+Mentioned articles:<br>
+	<a href="https://xd.adobe.com/ideas/process/ui-design/4-golden-rules-ui-design/">4 Golden Rules of UI Design by Nick Babich</a><br>
+	<a href="https://uxplanet.org/the-dos-and-don-ts-of-ux-design-f874d7834b45">Rashi Desai’s The Do’s and Don’ts of UX Design</a><br>
+	<a href="https://www.nngroup.com/articles/ten-usability-heuristics/">Jakob Nielsons 10 Usability Heuristics for User Interface Design</a><br>
+	<br>
+Related articles:<br>
+	<a href="https://uxdesign.cc/designing-an-admin-panel-3e77c19870f4">https://uxdesign.cc/designing-an-admin-panel-3e77c19870f4</a><br>
+	<a href="https://www.netguru.com/blog/admin-panel-design">https://www.netguru.com/blog/admin-panel-design</a><br>
+	<a href="https://medium.com/@erikdkennedy/7-rules-for-creating-gorgeous-ui-part-1-559d4e805cda">https://medium.com/@erikdkennedy/7-rules-for-creating-gorgeous-ui-part-1-559d4e805cda</a><br>
 </p>
   </div>
 </body>
