--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
 		.terminology {
 			font-size: 18px;
 		}
+		.hr {
+			margin-left: 20%;
+			margin-right: 20%;
+		}
 	</style>
 </head>
 <body>
-  <div class="title"><strong><h1>User Experience with Administrative User Interfaces</h1></strong></div>
-  <h3>Background</h3>
+  <div class="title"><strong><h1>Creating a Good User Experience with Administrative User Interfaces</h1></strong></div>
   <div class="background">
-	  <h3>Background</h3><br>
+	  <h3>Background</h3>
 	  <p class="terminology">Some terminology to help with understanding the content of this article:<br>
 		Workflow - the steps someone takes to accomplish a task from start to finish<br>
 		Administrative panel or admin panel - The location in an application where a designated user or users go to make modifications to the data or settings for the application<br>
@@ -38,7 +41,7 @@
 		An appreciation for good UI/UX :)<br>
 	  </p>
   </div>
-  <hr>
+  <hr class="hr">
   <div class="main">
   <p>Designing a good admin panel UI is an important part of creating a good website or platform that allows administrators to modify their site quickly and easily. While end users should never see the administrative panel, it is crucial that it is designed well for your administrator clients. There are also a few different factors that should be taken into account when creating an administrative panel, some follow the same goals as those for end users, or the “front end” of the application, but there are some that should be handled differently.
   </p>
