--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 			margin-left: 20%;
 			margin-right: 20%;
 		}
+		body {
+			background-color: #f1f1f1;	
+		}
+		h3 h1 {
+			font-family: arial;	
+		}
 	</style>
 </head>
 <body>
@@ -32,12 +38,12 @@
   <div class="background">
 	  <h3>Background</h3>
 	  <p class="terminology">Some terminology to help with understanding the content of this article:<br>
-		Workflow - the steps someone takes to accomplish a task from start to finish<br>
-		Administrative panel or admin panel - The location in an application where a designated user or users go to make modifications to the data or settings for the application<br>
-		UI - stands for user interface, the part of an application that users interact with<br>
-		UX - stands for user experience, a well crafted UI provides a good UX, and a good UX is the goal for any application<br>
-		End user - the final user of an application, if you are ordering a pizza online, you are the end user of that website<br>
-		Administrator - a general term used for people who control the content, and usually permissions, for an application. They are close to an end user, but have much more hands on work with the application than a true end user<br>
+		  <strong>Workflow</strong> - the steps someone takes to accomplish a task from start to finish<br>
+		  <strong>Administrative panel</strong> or <strong>admin panel</strong> - The location in an application where a designated user or users go to make modifications to the data or settings for the application<br>
+		  <strong>UI</strong> - stands for user interface, the part of an application that users interact with<br>
+		  <strong>UX</strong> - stands for user experience, a well crafted UI provides a good UX, and a good UX is the goal for any application<br>
+		  <strong>End user</strong> - the final user of an application, if you are ordering a pizza online, you are the end user of that website<br>
+		  <strong>Administrator</strong> - a general term used for people who control the content, and usually permissions, for an application. They are close to an end user, but have much more hands on work with the application than a true end user, such as customizing the look and feel of a site<br><br>
 		An appreciation for good UI/UX :)<br>
 	  </p>
   </div>
